--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "scripts": {
     "build": "npm run clean && tsc",
     "clean": "rimraf dist",
+    "format": "prettier --write \"{source,test}/**/*.{js,ts}\"",
     "prepublishOnly": "npm run build",
-    "test": "npm run test:node",
+    "test": "npm run test:node && npm run test:format",
+    "test:format": "prettier --check \"{source,test}/**/*.{js,ts}\"",
     "test:node": "npm run build && mocha 'test/node/**.spec.js'"
   },
   "files": [
@@ -23,6 +25,16 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/buttercup/fetch.git"
+  },
+  "lint-staged": {
+    "{source,test}/**/*.{js,ts}": [
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "keywords": [
     "fetch",
@@ -37,8 +49,11 @@
   "devDependencies": {
     "@types/node": "^18.11.18",
     "chai": "^4.3.7",
+    "husky": "^4.3.8",
     "json-server": "^0.17.1",
+    "lint-staged": "^13.1.0",
     "mocha": "^10.2.0",
+    "prettier": "^2.8.3",
     "rimraf": "^4.1.2",
     "typescript": "^4.9.5",
     "url-join": "^5.0.0"
