--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,18 @@
         "forceConsistentCasingInFileNames": true,
         "esModuleInterop": true,
         "outDir": "./dist",
+        "lib": [
+            "es2020",
+            "DOM"
+        ],
         "module": "es2020",
         "moduleResolution": "node",
         "declaration": true,
         "rootDir": "./source",
         "target": "es2020"
-    }
+    },
+    "exclude":[
+        "dist",
+        "node_modules"
+    ]
 }
