Add react-native entry

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "default": "./dist/index.node.js"
     }
   },
+  "react-native": "./dist/index.browser.js",
   "types": "./dist/index.node.d.ts",
   "scripts": {
     "build": "npm run clean && tsc",
